--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Alex - Designer"
-      content="Personal place on the internet for my work, thoughts, and anything that seems interesting."
+      name="Alex Lazar"
+      content="Desing portfolio and personal space on the internet for my work, thoughts, and interesting bits."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Geist&display=swap" rel="stylesheet">
